<resources>

    <string name="app_name">Japanese Characters Recognizer</string>
    
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
    <string name="kanji">Kanji</string>
    
    <string name="name_desc">Drawing syllable:</string>
    <string name="missing">a</string>
    
    <string name="clean">Clean</string>
    <string name="brush_size">Brush Size</string>
    <string name="eraser_size">Eraser Size</string>
    <string name="next">Next</string>
    
    <string name="tap">Tap the screen to start drawing new character.</string>
    
    <string name="sml">Small</string>
	<string name="med">Medium</string>
	<string name="lrg">Large</string>
	
	<string name="progress">Recognition match percentage:</string>

</resources>
