<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/hiragana" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"  
        android:textSize="30dp"
        android:text="@string/missing" />
    
    <LinearLayout 
        android:background="#ffffff"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:gravity="bottom" />

    <ImageView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/charImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/h01_a" />
    
    <LinearLayout 
        android:background="#ffffff"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:gravity="bottom" />

    <TextView
        android:id="@+id/tapText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/tap" />
    
    <LinearLayout 
        android:background="#ffffff"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:gravity="bottom" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/progress" />
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:paddingTop="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>